fixed layout issues

--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -4,3 +4,6 @@
 
 @import "./node_modules/tailwindcss/utilities";
 
+.content > p {
+  @apply mb-4;
+}
